--- a/build.xml
+++ b/build.xml
@@ -1,155 +1,216 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<project name="name-of-project" default="build">
+ <!-- By default, we assume all tools to be on the $PATH -->
+ <property name="toolsdir" value=""/>
 
-<project name="CakePHP" default="build">
- <property name="toolsdir" value="${basedir}/vendor/bin/"/>
- 
+ <!-- Uncomment the following when the tools are in ${basedir}/vendor/bin -->
+ <!-- <property name="toolsdir" value="${basedir}/vendor/bin/"/> -->
+
  <target name="build"
-   depends="prepare,lint,phploc,pdepend,phpcs-ci,phpcpd,phpdoc,cake,phpcb"/>
-   
+         depends="prepare,lint,phploc-ci,pdepend,phpmd-ci,phpcs-ci,phpcpd-ci,phpunit,phpdox"
+         description=""/>
 
  <target name="build-parallel"
-   depends="prepare,lint,tools-parallel,cake,phpcb"/>
+         depends="prepare,lint,tools-parallel,phpunit,phpdox"
+         description=""/>
 
- <target name="tools-parallel"
-         description="Run tools in parallel">
+ <target name="tools-parallel" description="Run tools in parallel">
   <parallel threadCount="2">
    <sequential>
     <antcall target="pdepend"/>
-    <!--
     <antcall target="phpmd-ci"/>
-  -->
    </sequential>
-   <antcall target="phpcpd"/>
+   <antcall target="phpcpd-ci"/>
    <antcall target="phpcs-ci"/>
-   <antcall target="phploc"/>
-   <antcall target="phpdoc"/>
+   <antcall target="phploc-ci"/>
   </parallel>
  </target>
 
- <target name="clean" description="Cleanup build artifacts">
+ <target name="clean"
+         unless="clean.done"
+         description="Cleanup build artifacts">
   <delete dir="${basedir}/build/api"/>
-  <delete dir="${basedir}/build/code-browser"/>
   <delete dir="${basedir}/build/coverage"/>
-  <delete dir="${basedir}/build/pdepend"/>
   <delete dir="${basedir}/build/logs"/>
+  <delete dir="${basedir}/build/pdepend"/>
+  <delete dir="${basedir}/build/phpdox"/>
+  <property name="clean.done" value="true"/>
  </target>
 
- <target name="prepare" depends="clean"
+ <target name="prepare"
+         unless="prepare.done"
+         depends="clean"
          description="Prepare for build">
   <mkdir dir="${basedir}/build/api"/>
-  <mkdir dir="${basedir}/build/code-browser"/>
   <mkdir dir="${basedir}/build/coverage"/>
-  <mkdir dir="${basedir}/build/pdepend"/>
   <mkdir dir="${basedir}/build/logs"/>
+  <mkdir dir="${basedir}/build/pdepend"/>
+  <mkdir dir="${basedir}/build/phpdox"/>
+  <property name="prepare.done" value="true"/>
  </target>
 
- <target name="lint">
-  <apply executable="php" failonerror="true">
+ <target name="lint"
+         unless="lint.done"
+         description="Perform syntax check of sourcecode files">
+  <apply executable="php" failonerror="true" taskname="lint">
    <arg value="-l" />
-   <fileset dir="${basedir}/lib/Cake">
+
+   <fileset dir="${basedir}/src">
+    <include name="**/*.php" />
+    <modified />
+   </fileset>
+
+   <fileset dir="${basedir}/tests">
     <include name="**/*.php" />
     <modified />
    </fileset>
   </apply>
+
+  <property name="lint.done" value="true"/>
  </target>
 
- <target name="phploc" description="Measure project size using PHPLOC">
-  <exec executable="${toolsdir}phploc">
-   <arg value="--exclude" />
-   <arg value="${basedir}/lib/Cake/Test" />
-   <arg value="--exclude" />
-   <arg value="${basedir}/lib/Cake/Templates" />
-   <arg value="--log-csv" />
-   <arg value="${basedir}/build/logs/phploc.csv" />
-   <arg path="${basedir}/lib/Cake" />
+ <target name="phploc"
+         unless="phploc.done"
+         description="Measure project size using PHPLOC and print human readable output. Intended for usage on the command line.">
+  <exec executable="${toolsdir}phploc" taskname="phploc">
+   <arg value="--count-tests" />
+   <arg path="${basedir}/src" />
+   <arg path="${basedir}/tests" />
   </exec>
+
+  <property name="phploc.done" value="true"/>
+ </target>
+
+ <target name="phploc-ci"
+         unless="phploc.done"
+         depends="prepare"
+         description="Measure project size using PHPLOC and log result in CSV and XML format. Intended for usage within a continuous integration environment.">
+  <exec executable="${toolsdir}phploc" taskname="phploc">
+   <arg value="--count-tests" />
+   <arg value="--log-csv" />
+   <arg path="${basedir}/build/logs/phploc.csv" />
+   <arg value="--log-xml" />
+   <arg path="${basedir}/build/logs/phploc.xml" />
+   <arg path="${basedir}/src" />
+   <arg path="${basedir}/tests" />
+  </exec>
+
+  <property name="phploc.done" value="true"/>
  </target>
 
  <target name="pdepend"
-         description="Calculate software metrics using PHP_Depend">
-  <exec executable="${toolsdir}pdepend">
-   <arg value="--ignore=${basedir}/lib/Cake/Test,${basedir}/lib/Cake/Console/Templates" />
+         unless="pdepend.done"
+         depends="prepare"
+         description="Calculate software metrics using PHP_Depend and log result in XML format. Intended for usage within a continuous integration environment.">
+  <exec executable="${toolsdir}pdepend" taskname="pdepend">
    <arg value="--jdepend-xml=${basedir}/build/logs/jdepend.xml" />
    <arg value="--jdepend-chart=${basedir}/build/pdepend/dependencies.svg" />
    <arg value="--overview-pyramid=${basedir}/build/pdepend/overview-pyramid.svg" />
-   <arg path="${basedir}/lib/Cake" />
+   <arg path="${basedir}/src" />
   </exec>
+
+  <property name="pdepend.done" value="true"/>
+ </target>
+
+ <target name="phpmd"
+         unless="phpmd.done"
+         description="Perform project mess detection using PHPMD and print human readable output. Intended for usage on the command line before committing.">
+  <exec executable="${toolsdir}phpmd" taskname="phpmd">
+   <arg path="${basedir}/src" />
+   <arg value="text" />
+   <arg path="${basedir}/build/phpmd.xml" />
+  </exec>
+
+  <property name="phpmd.done" value="true"/>
+ </target>
+
+ <target name="phpmd-ci"
+         unless="phpmd.done"
+         depends="prepare"
+         description="Perform project mess detection using PHPMD and log result in XML format. Intended for usage within a continuous integration environment.">
+  <exec executable="${toolsdir}phpmd" taskname="phpmd">
+   <arg path="${basedir}/src" />
+   <arg value="xml" />
+   <arg path="${basedir}/build/phpmd.xml" />
+   <arg value="--reportfile" />
+   <arg path="${basedir}/build/logs/pmd.xml" />
+  </exec>
+
+  <property name="phpmd.done" value="true"/>
  </target>
 
  <target name="phpcs"
+         unless="phpcs.done"
          description="Find coding standard violations using PHP_CodeSniffer and print human readable output. Intended for usage on the command line before committing.">
-  <exec executable="${toolsdir}phpcs">
-   <arg value="--standard=CakePHP" />
-   <arg value="--encoding=utf-8" />
-   <arg value="--ignore=${basedir}/lib/Cake/Console/Templates,${basedir}/lib/Cake/Test,*.txt,*.bat,*js" />
-   <arg path="${basedir}/lib/Cake" />
+  <exec executable="${toolsdir}phpcs" taskname="phpcs">
+   <arg value="--standard=PSR2" />
+   <arg value="--extensions=php" />
+   <arg value="--ignore=autoload.php" />
+   <arg path="${basedir}/src" />
+   <arg path="${basedir}/tests" />
   </exec>
+
+  <property name="phpcs.done" value="true"/>
  </target>
 
  <target name="phpcs-ci"
-         description="Find coding standard violations using PHP_CodeSniffer creating a log file for the continuous integration server">
-  <exec executable="${toolsdir}phpcs" output="/dev/null">
+         unless="phpcs.done"
+         depends="prepare"
+         description="Find coding standard violations using PHP_CodeSniffer and log result in XML format. Intended for usage within a continuous integration environment.">
+  <exec executable="${toolsdir}phpcs" output="/dev/null" taskname="phpcs">
    <arg value="--report=checkstyle" />
    <arg value="--report-file=${basedir}/build/logs/checkstyle.xml" />
-   <arg value="--standard=CakePHP" />
-   <arg value="--encoding=utf-8" />
-   <arg value="--ignore=${basedir}/lib/Cake/Console/Templates,${basedir}/lib/Cake/Test,*.txt,*.bat,*js" /> 
-   <arg path="${basedir}/lib/Cake" />
+   <arg value="--standard=PSR2" />
+   <arg value="--extensions=php" />
+   <arg value="--ignore=autoload.php" />
+   <arg path="${basedir}/src" />
   </exec>
+
+  <property name="phpcs.done" value="true"/>
  </target>
 
- <target name="phpcpd" description="Find duplicate code using PHPCPD">
-  <exec executable="${toolsdir}phpcpd">
+ <target name="phpcpd"
+         unless="phpcpd.done"
+         description="Find duplicate code using PHPCPD and print human readable output. Intended for usage on the command line before committing.">
+  <exec executable="${toolsdir}phpcpd" taskname="phpcpd">
+   <arg path="${basedir}/src" />
+  </exec>
+
+  <property name="phpcpd.done" value="true"/>
+ </target>
+
+ <target name="phpcpd-ci"
+         unless="phpcpd.done"
+         depends="prepare"
+         description="Find duplicate code using PHPCPD and log result in XML format. Intended for usage within a continuous integration environment.">
+  <exec executable="${toolsdir}phpcpd" taskname="phpcpd">
    <arg value="--log-pmd" />
-   <arg value="${basedir}/build/logs/pmd-cpd.xml" />
-   <arg value="--exclude" />
-   <arg value="${basedir}/lib/Cake/Test" />
-   <arg value="--exclude" />
-   <arg value="${basedir}/lib/Cake/Console/Templates" />
-   <arg path="${basedir}/lib/Cake" />
+   <arg path="${basedir}/build/logs/pmd-cpd.xml" />
+   <arg path="${basedir}/src" />
   </exec>
+
+  <property name="phpcpd.done" value="true"/>
  </target>
 
- <target name="phpdoc"
-         description="Generate API documentation using PHPDocumentor">
-  <exec executable="${toolsdir}phpdoc">
-   <arg value="--directory" />
-   <arg path="${basedir}/lib/Cake" />
-   <arg value="--target" />
-   <arg path="${basedir}/build/api" />
-   <arg value="--ignore" />
-   <arg value="Console/cake.php,Test/,Console/Templates/skel/,Config/unicode/" />
-   </exec>
+ <target name="phpunit"
+         unless="phpunit.done"
+         depends="prepare"
+         description="Run unit tests with PHPUnit">
+  <exec executable="${toolsdir}phpunit" failonerror="true" taskname="phpunit">
+   <arg value="--configuration"/>
+   <arg path="${basedir}/build/phpunit.xml"/>
+  </exec>
+
+  <property name="phpunit.done" value="true"/>
  </target>
 
- <target name="cake" description="Run unit tests">
-  <exec executable="app/Console/cake">
-   <arg value="test" />
-   <arg value="core" />
-   <arg value="AllTests" />
-   <arg value="--stderr" />
-   <arg value="--log-junit" />
-   <arg path="build/logs/junit.xml" />
-   <arg value="--coverage-clover" />
-   <arg path="build/logs/clover.xml" />
-   <arg value="--coverage-html" />
-   <arg path="build/coverage/" />
-  </exec>
- </target>
+ <target name="phpdox"
+         unless="phpdox.done"
+         depends="phploc-ci,phpcs-ci,phpmd-ci"
+         description="Generate project documentation using phpDox">
+  <exec executable="${toolsdir}phpdox" dir="${basedir}/build" taskname="phpdox"/>
 
- <target name="phpcb"
-         description="Aggregate tool output with PHP_CodeBrowser">
-  <exec executable="${toolsdir}phpcb">
-   <arg value="--log" />
-   <arg path="${basedir}/build/logs" />
-   <arg value="--source" />
-   <arg path="${basedir}/lib/Cake" />
-   <arg value="--output" />
-   <arg path="${basedir}/build/code-browser" />
-   <arg value="-S" />
-   <arg value="php" />
-   <arg value="-i" />
-   <arg value="lib/Cake/Console/cake,lib/Cake/Console/cake.php,lib/Cake/Test/,lib/Cake/LICENSE.txt,lib/Cake/VERSION.txt,lib/Cake/Console/Templates/skel/" />
-  </exec>
+  <property name="phpdox.done" value="true"/>
  </target>
 </project>
+
